//
//  Copyright (C) 2024 Skyloupe, LLC
// 
//  Licensed under the Apache License, Version 2.0 (the "License").
//  You may not use this file except in compliance with the License.
//  A copy of the License is located at
//  
//  https://www.apache.org/licenses/LICENSE-2.0.html
//  
//  or in the "license" file accompanying this file. This file is distributed
//  on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
//  express or implied. See the License for the specific language governing
//  permissions and limitations under the License.
//

syntax = "proto3";

package skyloupe.skytrans;

option go_package = "transport/proto";

message EsProcess {
    uint64 global_sequence_num = 1;

    uint32 pid = 2;
    uint32 ppid = 3;
    uint32 start_time = 4;
    uint64 start_time_ms = 5;
    string pathname = 6;
    bool discovered = 7;
    uint64 parent_start_time = 8;
    uint64 parent_start_time_ms = 9;
}

message Script {
    string path = 1;
}

message EsExec {
    EsProcess target = 1;
    Script script = 2;
}

message EsFork {
    EsProcess child = 1;
}

message EsExit {
    uint64 global_sequence_num = 1;
    uint32 stat = 2;
    uint64 exit_time_ms = 3;
}

message EsEvent {
    uint64 global_sequence_num = 1;
    uint32 event_type = 2;

    EsProcess process = 50;

    EsExec exec = 100;
    EsFork fork = 101;
    EsExit exit = 102;
}